@page RN9 Release notes for SCIP 9

@section RN923 SCIP 9.2.3
*************************

Fixed bugs
----------

- avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks

Build system
------------

### Cmake

### Makefile

Miscellaneous
-------------

- when writing a problem with non-generic names, warnings are printed if variable or constraint names are not unique

@section RN922 SCIP 9.2.2
*************************

Fixed bugs
----------

- fixed definition of slack variables of >= constraints and ranged rows in LP interface to Gurobi
- free memory leaking singleton arrays for ignored variables in SCIPapplyHeurDualval()
- use epsilon tolerance for bound implications of dual substitutions in dualPresolve() of cons_linear
- fixed timeouts due to race conditions when using TPI=omp
- fixed issues with indexing of concurrent solvers when a solver finishes (because SCIP is too fast) before others have been created when using TPI=tny
- respect fixing if variable is declared binary in bounds section of mps file
- fixed reading mps files with short row and column names and some fixed-form mps files with spaces in row names
- force local bounds to adjusted value when fixing variable
- adds missing NULL check for Benders' subproblems in feasalt cut
- apply objective scale to pseudoboolean non-linear terms
- impose pseudoboolean cost bound without intermediate casting
- flatten aggregation graph before finishing presolve to accelerate evaluating an empty solution
- respect fixed resultants in binvarGetActiveProbindex() of branch_relpscost
- drop fixed resultants when copying pseudoboolean constraint
- correct matrix entry when resolving aggregated variables in checkSystemGF2() of cons_xor
- corrected symmetry detection graph of cons_and, cons_or, cons_xor, and cons_indicator
- correct redundancy filter in consdataCreateRedundant() of cons_bounddisjunction