@@ -4501,7 +4501,7 @@ SCIP_RETCODE createConsXorIntvar(
    SCIP_Bool             rhs,                /**< right hand side of the constraint */
    int                   nvars,              /**< number of operator variables in the constraint */
    SCIP_VAR**            vars,               /**< array with operator variables of constraint */
-   SCIP_VAR*             intvar,             /**< artificial integer variable for linear relaxation */
+   SCIP_VAR*             intvar,             /**< integer variable for linear relaxation or NULL if artificial */
    SCIP_Bool             initial,            /**< should the LP relaxation of constraint be in the initial LP?
                                               *   Usually set to TRUE. Set to FALSE for 'lazy constraints'. */
    SCIP_Bool             separate,           /**< should the constraint be separated during LP processing?
@@ -4529,6 +4529,8 @@ SCIP_RETCODE createConsXorIntvar(
 {
    SCIP_CONSHDLR* conshdlr;
    SCIP_CONSDATA* consdata;
+   SCIP_VARTYPE intvartype;
+   int i;
 
    /* find the xor constraint handler */
    conshdlr = SCIPfindConshdlr(scip, CONSHDLR_NAME);
@@ -4536,6 +4538,28 @@ SCIP_RETCODE createConsXorIntvar(
    {
       SCIPerrorMessage("xor constraint handler not found\n");
       return SCIP_PLUGINNOTFOUND;
+   }
+
+   /* check whether int variable is integral */
+   if( intvar != NULL )
+   {
+      intvartype = SCIPvarGetType(intvar);
+
+      if( intvartype != SCIP_VARTYPE_BINARY && intvartype != SCIP_VARTYPE_INTEGER )
+      {
+         SCIPerrorMessage("intvar <%s> is not enforced integral\n", SCIPvarGetName(intvar));
+         return SCIP_INVALIDDATA;
+      }
+   }
+
+   /* check whether all variables are binary */
+   for( i = 0; i < nvars; ++i )
+   {
+      if( !SCIPvarIsBinary(vars[i]) )
+      {
+         SCIPerrorMessage("operand <%s> is not binary\n", SCIPvarGetName(vars[i]));
+         return SCIP_INVALIDDATA;
+      }
    }
 
    /* create constraint data */
@@ -4608,6 +4632,7 @@ SCIP_DECL_LINCONSUPGD(linconsUpgdXor)
       {
          SCIP_VAR** xorvars;
          SCIP_VAR* parityvar = NULL;
+         SCIP_VARTYPE parityvartype;
          SCIP_Bool postwo = FALSE;
          int cnt = 0;
          int j;
@@ -4620,6 +4645,15 @@ SCIP_DECL_LINCONSUPGD(linconsUpgdXor)
             if( SCIPisEQ(scip, REALABS(vals[j]), 2.0) )
             {
                parityvar = vars[j];
+               parityvartype = SCIPvarGetType(parityvar);
+
+               /* parity variable requires enforced integrality */
+               if( parityvartype != SCIP_VARTYPE_BINARY && parityvartype != SCIP_VARTYPE_INTEGER )
+               {
+                  parityvar = NULL;
+                  break;
+               }
+
                postwo = (vals[j] > 0.0);
             }
             else if( !SCIPisEQ(scip, REALABS(vals[j]), 1.0) )
@@ -5994,6 +6028,7 @@ SCIP_RETCODE SCIPcreateConsXor(
 {
    SCIP_CONSHDLR* conshdlr;
    SCIP_CONSDATA* consdata;
+   int i;
 
    /* find the xor constraint handler */
    conshdlr = SCIPfindConshdlr(scip, CONSHDLR_NAME);
@@ -6001,6 +6036,16 @@ SCIP_RETCODE SCIPcreateConsXor(
    {
       SCIPerrorMessage("xor constraint handler not found\n");
       return SCIP_PLUGINNOTFOUND;
+   }
+
+   /* check whether all variables are binary */
+   for( i = 0; i < nvars; ++i )
+   {
+      if( !SCIPvarIsBinary(vars[i]) )
+      {
+         SCIPerrorMessage("operand <%s> is not binary\n", SCIPvarGetName(vars[i]));
+         return SCIP_INVALIDDATA;
+      }
    }
 
    /* create constraint data */
