@@ -7,6 +7,7 @@ Fixed bugs
 ----------
 
 - avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks
+- when upgrading to xor constraint require parity variable to be enforced integral
 
 Build system
 ------------
